--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@tailwindcss/vite": "^4.1.12",
+    "framer-motion": "^12.23.12",
+    "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-simple-typewriter": "^5.0.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.12"
   },
