--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lottie-react": "^2.4.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-intersection-observer": "^9.16.0",
     "react-simple-typewriter": "^5.0.1",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.12"
